--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.6.0
   ffi: ^2.2.0
   flutter_secure_storage: ^10.0.0
+  local_auth: ^3.0.0
 
 dev_dependencies:
   flutter_test:
