--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -64,7 +64,6 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -93,3 +92,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+    - assets/branding/
+  assets:
+    - assets/branding/
