--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "staticlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
-bitcoin = { version = "0.32", features = ["secp-recovery"] }
+jni = "0.21.1"
+# The industry standard for mnemonic generation
+bip39 = "2.0.0" 
+rand = "0.8.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 hex = "0.4"
-aes-gcm = "0.10"
-base64 = "0.21"
-rand = "0.8"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
