--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -13,5 +13,5 @@ hmac = "0.12.1"
 pbkdf2 = "0.11.0"
 sha2 = "0.10.8"
 ripemd = "0.1.3"
-bs58 = { version = "0.5.0", features = ["check"] } # Enables with_check()
+bs58 = { version = "0.5.0", features = ["check"] }
 k256 = { version = "0.13.1", features = ["ecdsa"] }
