--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -15,3 +15,7 @@ sha2 = "0.10.8"
 ripemd = "0.1.3"
 bs58 = { version = "0.5.0", features = ["check"] }
 k256 = { version = "0.13.1", features = ["ecdsa"] }
+# JSON FFI Bridge Dependencies
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+hex = "0.4.3"
