--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: ReddMobile Android Build
+name: ReddMobile Master Build
 
 on:
   push:
     tags:
-      - 'v*.*.*' # Triggers only on version tags
+      - 'v*.*.*'
 
 jobs:
   build:
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0' # Adjust to your specific stable version
+          flutter-version: '3.19.0'
           channel: 'stable'
           
       - name: Install Rust target
@@ -31,7 +31,6 @@ jobs:
           cd rust_core
           cargo build --target aarch64-linux-android --release
           cargo build --target x86_64-linux-android --release
-          # Create jniLibs structure
           mkdir -p ../flutter_app/android/app/src/main/jniLibs/arm64-v8a
           mkdir -p ../flutter_app/android/app/src/main/jniLibs/x86_64
           cp target/aarch64-linux-android/release/librust_core.so ../flutter_app/android/app/src/main/jniLibs/arm64-v8a/
@@ -45,9 +44,7 @@ jobs:
 
       - name: Rename APK for Release
         run: |
-          # Get the tag name (e.g., v0.6.0)
           TAG_NAME=${GITHUB_REF#refs/tags/}
-          # Rename the default app-release.apk
           mv flutter_app/build/app/outputs/flutter-apk/app-release.apk flutter_app/build/app/outputs/flutter-apk/ReddMobile-${TAG_NAME}.apk
           
       - name: Upload APK Artifact
