--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4 # Upgraded to v4
       
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4 # Upgraded to v4
         with:
           distribution: 'zulu'
           java-version: '17'
@@ -48,7 +48,7 @@ jobs:
           mv flutter_app/build/app/outputs/flutter-apk/app-release.apk flutter_app/build/app/outputs/flutter-apk/ReddMobile-${TAG_NAME}.apk
           
       - name: Upload APK Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4 # Upgraded to v4
         with:
           name: ReddMobile-${{ github.ref_name }}
           path: flutter_app/build/app/outputs/flutter-apk/ReddMobile-*.apk
