--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4 # Upgraded to v4
+      - uses: actions/checkout@v4
       
       - name: Setup Java
-        uses: actions/setup-java@v4 # Upgraded to v4
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
@@ -29,8 +29,14 @@ jobs:
       - name: Build Rust Core
         run: |
           cd rust_core
+          # FORCE CACHE BUST: Prevent ELF format mismatch during cross-compilation
+          cargo clean
+          
+          # Build aarch64
           cargo build --target aarch64-linux-android --release
+          # Build x86_64
           cargo build --target x86_64-linux-android --release
+          
           mkdir -p ../flutter_app/android/app/src/main/jniLibs/arm64-v8a
           mkdir -p ../flutter_app/android/app/src/main/jniLibs/x86_64
           cp target/aarch64-linux-android/release/librust_core.so ../flutter_app/android/app/src/main/jniLibs/arm64-v8a/
@@ -48,7 +54,7 @@ jobs:
           mv flutter_app/build/app/outputs/flutter-apk/app-release.apk flutter_app/build/app/outputs/flutter-apk/ReddMobile-${TAG_NAME}.apk
           
       - name: Upload APK Artifact
-        uses: actions/upload-artifact@v4 # Upgraded to v4
+        uses: actions/upload-artifact@v4
         with:
           name: ReddMobile-${{ github.ref_name }}
           path: flutter_app/build/app/outputs/flutter-apk/ReddMobile-*.apk
