--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -8,9 +8,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 bip39 = "2.0.0"
+bip32 = { version = "0.5.0", features = ["secp256k1"] }
 rand = "0.8.5"
-hmac = "0.12.1"
-pbkdf2 = "0.11.0"
 sha2 = "0.10.8"
 ripemd = "0.1.3"
 bs58 = { version = "0.5.0", features = ["check"] }
