--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   http: ^1.1.0
   path_provider: ^2.1.1
   flutter_native_splash: ^2.3.1
+  android_12: true
+  fullscreen: true
   flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
@@ -22,6 +24,8 @@ dev_dependencies:
   flutter_lints: ^3.0.0
 
 flutter_native_splash:
+  android_12: true
+  fullscreen: true
   color: "#0F0F0F"
   image: assets/branding/redd_logo_full.png
   android_12:
