--- a/flutter_app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/flutter_app/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = redd_mobile
+PRODUCT_NAME = flutter_app
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.reddcoin.reddMobile
+PRODUCT_BUNDLE_IDENTIFIER = com.redd.mobile.flutterApp
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2026 com.reddcoin. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2026 com.redd.mobile. All rights reserved.
