--- a/flutter_app/windows/runner/Runner.rc
+++ b/flutter_app/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.reddcoin" "\0"
-            VALUE "FileDescription", "redd_mobile" "\0"
+            VALUE "CompanyName", "com.redd.mobile" "\0"
+            VALUE "FileDescription", "flutter_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "redd_mobile" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2026 com.reddcoin. All rights reserved." "\0"
-            VALUE "OriginalFilename", "redd_mobile.exe" "\0"
-            VALUE "ProductName", "redd_mobile" "\0"
+            VALUE "InternalName", "flutter_app" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2026 com.redd.mobile. All rights reserved." "\0"
+            VALUE "OriginalFilename", "flutter_app.exe" "\0"
+            VALUE "ProductName", "flutter_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
