fix(v0.8.12): add missing flutter_bloc dependencies to pubspec and remove --no-pub flag from CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Build Flutter APK
         run: |
           cd flutter_app
-          flutter build apk --release --no-pub
+          flutter build apk --release
 
       - name: Rename APK for Release
         run: |
