--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   qr_flutter: ^4.1.0
   share_plus: ^7.2.2
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.8
 
 dev_dependencies:
   flutter_test:
