--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,22 @@ jobs:
           flutter create --platforms android --org com.redd.mobile .
           flutter pub get
 
+      - name: Fix Kotlin Duplicate Class Conflict
+        run: |
+          # This appends the resolution strategy to the generated build.gradle
+          cat << 'GRADLE_FIX' >> flutter_app/android/build.gradle
+          
+          subprojects {
+              project.configurations.all {
+                  resolutionStrategy.eachDependency { details ->
+                      if (details.requested.group == 'org.jetbrains.kotlin') {
+                          details.useVersion "1.8.22"
+                      }
+                  }
+              }
+          }
+          GRADLE_FIX
+
       - name: Build Rust Core & Inject JNI
         run: |
           cd rust_core
@@ -44,7 +60,6 @@ jobs:
       - name: Build Flutter APK
         run: |
           cd flutter_app
-          # The missing dependencies are now safely downloaded by standard pub get
           flutter build apk --release
 
       - name: Rename APK for Release
