--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   share_plus: ^7.2.2
   flutter_bloc: ^9.1.1
   equatable: ^2.0.8
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
