--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*.*.*'
 
+permissions:
+  contents: write # Required to publish GitHub Releases
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -38,9 +41,7 @@ jobs:
 
       - name: Fix Kotlin Duplicate Class Conflict
         run: |
-          # This appends the resolution strategy to the generated build.gradle
           cat << 'GRADLE_FIX' >> flutter_app/android/build.gradle
-          
           subprojects {
               project.configurations.all {
                   resolutionStrategy.eachDependency { details ->
@@ -67,8 +68,23 @@ jobs:
           TAG_NAME=${GITHUB_REF#refs/tags/}
           mv flutter_app/build/app/outputs/flutter-apk/app-release.apk flutter_app/build/app/outputs/flutter-apk/ReddMobile-${TAG_NAME}.apk
           
-      - name: Upload APK Artifact
-        uses: actions/upload-artifact@v4
+      - name: Generate Bulleted Release Notes
+        run: |
+          echo "### 🚀 Release ${GITHUB_REF_NAME}" > release_notes.md
+          echo "" >> release_notes.md
+          echo "**Updates & Fixes:**" >> release_notes.md
+          # Convert the commit message into a bulleted list dynamically
+          git log -1 --pretty=%B | while read line; do
+            if [ ! -z "$line" ]; then
+              echo "* $line" >> release_notes.md
+            fi
+          done
+          
+      - name: Publish Official GitHub Release
+        uses: softprops/action-gh-release@v2
         with:
-          name: ReddMobile-${{ github.ref_name }}
-          path: flutter_app/build/app/outputs/flutter-apk/ReddMobile-*.apk
+          name: ReddMobile ${{ github.ref_name }}
+          body_path: release_notes.md
+          files: flutter_app/build/app/outputs/flutter-apk/ReddMobile-*.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
