feat(v0.10.0): implement complete security onboarding flow and in-feed tipping
Add formal ROADMAP.md to track future architecture goals.

Fix GitHub Releases bug by explicitly setting make_latest tag in CI/CD pipeline.

Integrate In-Feed Tipping via updated SendDialog routing.

Replace temporary onboarding bypass with secure Backup and Verification phrase screens.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,4 +81,5 @@ jobs:
         with:
           name: ReddMobile ${{ github.ref_name }}
           body_path: release_notes.md
+          make_latest: "true"
           files: flutter_app/build/app/outputs/flutter-apk/ReddMobile-*.apk
