--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -13,10 +13,11 @@ dependencies:
   http: ^1.2.0
   flutter_secure_storage: ^9.0.0
   qr_flutter: ^4.1.0
-  share_plus: ^7.2.2
+  share_plus: ^12.0.1
   flutter_bloc: ^9.1.1
   equatable: ^2.0.8
   image_picker: ^1.1.2
+  app_links: ^7.0.0
 
 dev_dependencies:
   flutter_test:
