--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   equatable: ^2.0.8
   image_picker: ^1.1.2
   app_links: ^6.1.1
+  local_auth: ^2.1.6
 
 dev_dependencies:
   flutter_test:
