--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image_picker: ^1.1.2
   app_links: ^6.1.1
   local_auth: ^2.1.6
+  confetti: ^0.8.0
 
 dev_dependencies:
   flutter_test:
