--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,16 +23,31 @@ jobs:
         run: rustup target add aarch64-linux-android x86_64-linux-android
       - name: Install cargo-ndk
         run: cargo install cargo-ndk
-      - name: Generate Pristine Android Shell & Inject OS Intensions
+      - name: Generate Pristine Android Shell & Icons
         run: |
           cd flutter_app
           rm -rf android
-          flutter create --platforms android --org com.redd.mobile .
-          flutter pub get
+          # 1. Update the Application ID natively
+          flutter create --platforms android --org com.reddcoin --project-name reddmobile .
           
+          # 2. Setup Official Reddcoin App Icons
+          mkdir -p assets
+          wget -qO assets/icon.png https://raw.githubusercontent.com/reddcoin-project/reddcoin/master/src/qt/res/icons/reddcoin.png || echo "Failed to fetch icon"
+          
+          cat << 'ICON_CONFIG' > flutter_launcher_icons.yaml
+          flutter_launcher_icons:
+            android: "ic_launcher"
+            ios: true
+            image_path: "assets/icon.png"
+            min_sdk_android: 21
+          ICON_CONFIG
+          
+          flutter pub get
+          dart run flutter_launcher_icons
+          
+          # 3. Inject OS Intensions via Python
           python3 -c "
           import os
-          # 1. Modify AndroidManifest.xml
           manifest = 'android/app/src/main/AndroidManifest.xml'
           with open(manifest, 'r') as f: d = f.read()
           d = d.replace('<application', '<uses-permission android:name=\"android.permission.USE_BIOMETRIC\"/>\n    <application')
@@ -47,8 +62,8 @@ jobs:
           d = d.replace('</activity>', intent + '</activity>')
           with open(manifest, 'w') as f: f.write(d)
 
-          # 2. Modify MainActivity.kt for Biometrics
-          kt = 'android/app/src/main/kotlin/com/redd/mobile/MainActivity.kt'
+          # Notice the updated Application ID Path!
+          kt = 'android/app/src/main/kotlin/com/reddcoin/reddmobile/MainActivity.kt'
           if os.path.exists(kt):
               with open(kt, 'r') as f: k_d = f.read()
               k_d = k_d.replace('io.flutter.embedding.android.FlutterActivity', 'io.flutter.embedding.android.FlutterFragmentActivity')
