--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -20,12 +20,13 @@ dependencies:
   app_links: ^6.1.1
   local_auth: ^2.1.6
   confetti: ^0.8.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
 
 flutter_launcher_icons:
   android: "launcher_icon"
