--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   local_auth: ^2.1.6
   confetti: ^0.8.0
   url_launcher: ^6.3.2
+  screenshot: ^3.0.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
