--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   url_launcher: ^6.3.2
   screenshot: ^2.1.1
   path_provider: ^2.1.2
+  mobile_scanner: ^3.5.6
 
 dev_dependencies:
   flutter_test:
