fix(v0.14.0): resolve launcher icon build error and implement network pulse
Fixed RangeError in flutter_launcher_icons by resetting config. Locked dependencies for Dart 3.3.0 compatibility. Integrated Network Health Snapshot and Social Pulse UI.

--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -37,3 +37,10 @@ flutter_launcher_icons:
   image_path: "assets/images/logo.png"
   min_sdk_android: 21
 
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  adaptive_icon_background: "#E31B23"
+  adaptive_icon_foreground: "assets/images/logo.png"
