--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -1,46 +1,41 @@
 name: redd_mobile
-description: "A professional Reddcoin wallet with ReddID integration."
+description: "ReddMobile: Socially Sustainable Web3 Wallet"
+version: 0.14.0+1
 publish_to: 'none'
-version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
+  flutter_bloc: ^8.1.3
   http: ^1.2.0
   flutter_secure_storage: ^9.0.0
-  qr_flutter: ^4.1.0
-  share_plus: ^10.0.0
-  flutter_bloc: ^9.1.1
-  equatable: ^2.0.8
-  image_picker: ^1.0.4
-  app_links: ^6.1.1
+  bip39: ^1.0.6
+  hex: ^0.2.0
+  share_plus: ^7.2.1
+  path_provider: 2.1.2
+  url_launcher: 6.3.1
+  screenshot: 2.1.1
+  mobile_scanner: 3.5.6
+  image_picker: 1.0.4
   local_auth: ^2.1.6
-  confetti: ^0.8.0
-  url_launcher: ^6.3.1
-  screenshot: ^2.1.1
-  path_provider: ^2.1.2
-  mobile_scanner: ^3.5.6
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  flutter_launcher_icons: ^0.14.4
-
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/images/logo.png"
-  min_sdk_android: 21
-
+  flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/images/logo.png"
-  adaptive_icon_background: "#E31B23"
-  adaptive_icon_foreground: "assets/images/logo.png"
+
+flutter:
+  uses-material-design: true
+  assets:
+    - assets/images/
