--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -1,6 +1,6 @@
 name: redd_mobile
 description: "ReddMobile: Socially Sustainable Web3 Wallet"
-version: 0.14.1+2
+version: 0.14.3+3
 publish_to: 'none'
 
 environment:
@@ -16,7 +16,6 @@ dependencies:
   bip39: ^1.0.6
   hex: ^0.2.0
   share_plus: ^7.2.1
-  # Explicit locks for Dart 3.3.0 compatibility
   path_provider: 2.1.2
   url_launcher: 6.3.1
   screenshot: 2.3.0
@@ -29,12 +28,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: 0.13.1
 
+# Simplified config to avoid RangeError crash
 flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/images/logo.png"
+  # Adaptive icons disabled to prevent CI image-processing index errors
 
 flutter:
   uses-material-design: true
