--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -1,6 +1,6 @@
 name: redd_mobile
 description: "ReddMobile: Socially Sustainable Web3 Wallet"
-version: 0.14.6+6
+version: 0.14.9+9
 publish_to: 'none'
 
 environment:
@@ -12,17 +12,17 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.3
   http: ^1.2.0
-  flutter_secure_storage: ^9.0.0
-  bip39: ^1.0.6
-  hex: ^0.2.0
-  share_plus: ^7.2.1
+  flutter_secure_storage: 9.0.0
+  bip39: 1.0.6
+  hex: 0.2.0
+  share_plus: 7.2.1
   path_provider: 2.1.2
   url_launcher: 6.3.1
   screenshot: 2.3.0
   mobile_scanner: 3.5.6
   image_picker: 1.0.4
   local_auth: 2.1.6
-  qr_flutter: ^4.1.0
+  qr_flutter: 4.1.0
 
 dev_dependencies:
   flutter_test:
