--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.3
   http: ^1.2.0
-  flutter_secure_storage: 9.0.0
+  flutter_secure_storage: ^9.2.4
   bip39: 1.0.6
   hex: 0.2.0
   share_plus: 7.2.1
