--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -7,6 +7,9 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
+  confetti: ^0.8.0
+  app_links: ^3.4.0
+  equatable: ^2.0.5
   app_links: ^3.4.0
   equatable: ^2.0.5
   flutter_secure_storage: ^9.2.4
@@ -27,6 +30,9 @@ dependencies:
   qr_flutter: 4.1.0
 
 dev_dependencies:
+  confetti: ^0.8.0
+  app_links: ^3.4.0
+  equatable: ^2.0.5
   app_links: ^3.4.0
   equatable: ^2.0.5
   flutter_secure_storage: ^9.2.4
