fix(v0.14.25): bump minSdkVersion to 21 and track assets dir
Instructed CI to bump minSdkVersion to 21 to support mobile_scanner and added .gitkeep to ensure pubspec finds the assets directory.

--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -20,6 +20,10 @@ jobs:
           rm -rf android
           # Natively generate a modern, V2-compliant platform
           flutter create --platforms=android --org com.reddcoin .
+          
+          # --- NEW FIX: Bump minSdkVersion to 21 for mobile_scanner ---
+          sed -i 's/minSdkVersion .*/minSdkVersion 21/g' android/app/build.gradle
+          
           # Inject the necessary Web3 permissions and legacy security handshake
           python3 -c "
           file_path = 'android/app/src/main/AndroidManifest.xml'
