--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -4,16 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
+name = "rust_core"
 crate-type = ["cdylib"]
 
 [dependencies]
-bip39 = "2.0.0"
-bip32 = { version = "0.5.0", features = ["secp256k1"] }
-rand = "0.8.5"
-sha2 = "0.10.8"
-ripemd = "0.1.3"
-bs58 = { version = "0.5.0", features = ["check"] }
-k256 = { version = "0.13.1", features = ["ecdsa"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-hex = "0.4.3"
+# We will add actual crypto dependencies (secp256k1, bip39) in the next phase.
+# For now, we just need the compiler to successfully build the FFI bridge.
